RESOLVED FIXED283806
[macOS] Pressing Shift + Up should not cause the page to scroll
https://bugs.webkit.org/show_bug.cgi?id=283806
Summary [macOS] Pressing Shift + Up should not cause the page to scroll
Wenson Hsieh
Reported 2024-11-28 16:42:38 PST
Attachments
Wenson Hsieh
Comment 1 2024-11-28 16:57:21 PST
Alexey Proskuryakov
Comment 2 2024-11-28 17:35:31 PST
Previously reported as bug 282852.
EWS
Comment 3 2024-11-28 19:30:10 PST
Committed 287161@main (35b3fc5d9015): <https://commits.webkit.org/287161@main> Reviewed commits have been landed. Closing PR #37235 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.