[macOS] Pressing Shift + Up should not cause the page to scroll https://bugs.webkit.org/show_bug.cgi?id=283806 rdar://137983379

Reviewed by Richard Robinson.

Currently, pressing Shift + Up (or Shift + Alt|Command + Up) triggers keyboard scrolling; this
behavior is inconsistent with Firefox and Chrome on macOS, as well as Safari on iPadOS. This also
leads to unintuitive behaviors after pressing Shift + Up to modify the selection, since keyboard
scrolling will immediately start once the selection is collapsed.

Fix this by returning early in the case where the shift key is held, when pressing up or down on the
keyboard.

* LayoutTests/fast/scrolling/mac/no-keyboard-scrolling-when-holding-shift-expected.txt: Added.
* LayoutTests/fast/scrolling/mac/no-keyboard-scrolling-when-holding-shift.html: Added.
* Source/WebCore/platform/KeyboardScrollingAnimator.cpp:
(WebCore::scrollGranularityForKeyboardEvent):

Canonical link: https://commits.webkit.org/287161@main